--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,9 @@ dependencies {
     compile 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:2.0.0'
     compile 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.0.0'
 
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.2'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.2'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.2'
+
 
 }
