--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 
-
 buildscript {
-    
+    ext.Kotlin_version = '1.1.51'
     repositories {
         google()
         jcenter()
@@ -12,8 +11,9 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-rc2'
-        classpath "gradle.plugin.me.tatarka:gradle-retrolambda:3.7.0"
+        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.51'
+//        classpath "gradle.plugin.me.tatarka:gradle-retrolambda:3.7.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
